@@ -1,50 +1,27 @@
 ## Process this file with automake to produce Makefile.in
 
-# python scripts & extension modules
-pkgpythondir = $(pyexecdir)/gcl-1
-pkgpyexecdir = $(pyexecdir)/gcl-1
 
-# gtk python extension modules
-pygtkexecdir = $(pkgpyexecdir)/gcl
-pygtkexec_LTLIBRARIES = _gcl.la
+EXTRA_DIST = vte.defs vte.override cat.py unrealize.py vte-demo.py
 
-# gtk python scripts
-pygcldir = $(pkgpythondir)/gcl
-pygcl_PYTHON =                  \
-        __init__.py             \
-        _lazyutils.py           \
-        compat.py                       \
-        deprecation.py          \
-        keysyms.py
+PYTHON_MODULES = gclcalendar.la
 
-common_ldflags = -module -avoid-version
+pythonsiteexecdir = $(pyexecdir)/gtk-2.0
+pythonsiteexec_LTLIBRARIES = $(PYTHON_MODULES)
 
-BUILT_SOURCES = \
-	calendar.c		\
-	date.c
+CLEANFILES = calendar.c
 
-_gcl_la_SOURCES = \
-	$(BUILT_SOURCES)	\
-	gclmodule.c
+# we do this to suport building with -Wl,-z,defs which errors on 
+# vtemodule.so as we cannot include $(PYTHON_LIBS) due to bug 410986.
+AM_LDFLAGS = $(PYTHON_LDFLAGS)
 
-_gcl_la_LDFLAGS = $(common_ldflags) -export-symbols-regex init_gcl
+gclcalendar_la_CFLAGS = $(LIBGCL_CFLAGS) $(PYTHON_INCLUDES) $(PYGTK_CFLAGS)
+gclcalendar_la_SOURCES = gclmodule.c
+gclcalendar_la_LIBADD = $(top_builddir)/gcl/libgcl-1.la $(PYTHON_LIBS) $(LIBS) $(PYGTK_LIBS) $(LIBGCL_LIBS)
+gclcalendar_la_LDFLAGS = -module -avoid-version -export-symbols-regex initgclcalendar
+nodist_gclcalendar_la_SOURCES = calendar.c
 
-_gcl_la_LIBADD = \
-	$(top_builddir)/gcl/libgcl-1.la
-	$(PYTHON_LIB_LOC)       \
-	$(PYTHON_LIBS)		\
-	$(PYTHON_EXTRA_LIBS)	\
-	$(PYGTK_LIBS)
 
-_gcl_la_CFLAGS = \
-	-I$(top_srcdir)			\
-	-I$(top_builddir)		\
-	-I$(top_srcdir)/gcl		\
-	-I$(top_builddir)/gcl		\
-	$(LIBGCL_CFLAGS)		\
-	$(PYGTK_CFLAGS)			\
-	$(PYTHON_CFLAGS)		\
-	$(AM_CFLAGS)
+#########################################
 
 $(top_builddir)/gcl/gcl-enum-types.h:
 	cd $(top_builddir)/gcl && $(MAKE) gcl-enum-types.h
@@ -57,34 +34,13 @@ calendar.c: calendar.defs calendar.override  $(top_builddir)/gcl/gcl-enum-types.
 		--override $*.override \
 		--prefix py$* $(<F) ) > $@ 
 
-date.c: date.defs date.override $(top_builddir)/gcl/gcl-enum-types.h
-	( cd $(srcdir) && $(PYGTK_CODEGEN) \
-		--override $*.override \
-		--prefix py$* $(<F) ) > $@ 
-
-BINDING_CALENDAR_HEADERS_SRCDIR_IN = \
-	gcl/gcl-calendar.h
-
-BINDING_DATE_HEADERS_SRCDIR_IN = \
-	gcl/gcl-date.h
-
-BINDING_HEADERS_BUILDDIR_IN = gcl/gcl-main.h
-
-BINDING_CALENDAR_HEADERS_SRCDIR	:= $(addprefix $(top_srcdir)/,$(BINDING_CALENDAR_HEADERS_SRCDIR_IN))
-BINDING_DATE_HEADERS_SRCDIR	:= $(addprefix $(top_srcdir)/,$(BINDING_DATE_HEADERS_SRCDIR_IN))
-
-BINDING_HEADERS_BUILDDIR	:= $(addprefix $(top_builddir)/,$(BINDING_HEADERS_BUILDDIR_IN))
 
 regenerate-python-binding:
 	$(PYGTK_H2DEF) $(sort $(BINDING_CALENDAR_HEADERS_SRCDIR) $(BINDING_HEADERS_BUILDDIR)) > calendar.defs.new
-	$(PYGTK_H2DEF) $(sort $(BINDING_DATE_HEADERS_SRCDIR) $(BINDING_HEADERS_BUILDDIR)) > date.defs.new
-
 
 EXTRA_DIST = \
 	calendar.override		\
-	calendar.defs		\
-	date.override	\
-	date.defs
+	calendar.defs
 
 CLEANFILES = $(BUILT_SOURCES)
 
